# pablotomasborda.co.uk

./: contact.html  custom.css  index.html  nohup.out  pablotomasborda.rb  portfolio.html.bak  test.html
downloads/: .~lock.resume.doc#  resume-20141108.pages  resume.docx  resume.odt  resume1.docx  resume1.odt
javascript/gal/: imageflip.js  index.html
javascript/slide/js/: jquery-mobile-slide-menu.js
mailer/: .mailfeed.csv.swp  mailer.rb  mailfeed.csv  mailtest.rb  rest.csv
projects/chrome-extensions/TrollFaces/: contentscript.js  manifest.json
projects/chrome-extensions/smartffiler-chrome/: background.js  contentscript.js  manifest.json  popup.html
projects/chrome-extensions/timer/: manifest.json  page.js  popup.html  popup.js
projects/smartbands/magic/GetStuffClose/GSCBilling/: dmbill.rb
projects/smartbands/magic/GetStuffClose/GSCMessagesWS/GSCMessagesWS/: .project  Rakefile  storemessagesws.rb
projects/smartbands/magic/GetStuffClose/GSCSignUp/: dmbackend.rb
projects/smartbands/magic/GetStuffClose/GSCSignUp/views/: addresses.erb  captcha.erb  companydata.erb  finish.erb  footer.erb  header.erb  index.erb  input_card_data.erb  login.erb  pay.erb  products.erb  productstablelist.erb  registration.erb  stores.erb  tutorial.erb  upload.erb  wrong_card.erb
projects/smartbands/magic/GetStuffClose/captcha/: .project  alice.txt  captcha.rb  deleteoldimages.rb
projects/smartbands/magic/GetStuffClose/newcompanyws/: newcompany.rb
projects/smartbands/magic/GetStuffClose/productsws/: productsws.rb
projects/smartbands/magic/SmartBandS/SmartBandS/: .project  dmbackend.rb
projects/smartbands/magic/SmartBandS/consulting/: .project  corporate.rb
projects/smartbands/magic/argenport-webtool/: .project
projects/smartbands/magic/argenport-webtool/config/: argenport_cfg.rb  database.yml  routes.rb
projects/smartbands/magic/delivery-magic-wap/: .project  nohup.out  nohup1.out
projects/smartbands/magic/delivery-magic-wap/config/: database.yml  environment.rb  routes.rb
projects/smartbands/magic/delivery-magic-wap/db/: development_structure.sql
projects/smartbands/magic/ivr/trunk/: ivr.rb  langs.rb  nohup.out
projects/smartbands/magic/pedidosya/: database_mapping.rb  installer.rb  normalize_addrs.rb  restaurantes.rb  superprods.rb
projects/smartbands/magic/xp/: _20091124_0205.sql  buildall.sh  calculation.txt
projects/smartbands/magic/xp/XPMonitor/trunk/: CMakeCache.txt  CMakeLists.txt  XPCapture.cpp  XPCapture.h  XPSeed.cpp  XPSeed.h  login.h  login.ui  loginDialog.h  main.cpp  moc_XPSeed.cpp  moc_login.cpp  moc_window.cpp  qrc_systray.cpp  session.ui  systray.qrc  ui_session.h  ui_xpmonitor.h  window.cpp  window.h  xpmonitor.ui  xpuploader.cpp  xpuploader.h
projects/smartbands/magic/xp/diffstat/: CMakeLists.txt  diffstat.c  diffstat.h  hashtable.c  hashtable.h
projects/smartbands/magic/xp/gocr-0.47/: Makefile  config.status
projects/smartbands/magic/xp/xp-commons/: .cproject  .project  Bucket.cpp  Bucket.h  CMakeCache.txt  CMakeLists.txt  DynamicHashTable.cpp  DynamicHashTable.h  HashDynamicRecord.cpp  HashDynamicRecord.h  HashRecord.cpp  HashRecord.h  HashStaticRecord.cpp  HashStaticRecord.h  Makefile  ServerRequest.cpp  ServerRequest.h  ServerRequestHandler.cpp  ServerRequestHandler.h  Session.cpp  Session.h  Session.vim  UDPClient.cpp  UDPClient.h  UDPServer.cpp  UDPServer.h  Utils.cpp  Utils.h  cmake_install.cmake  commons.cpp  commons.h  config.h  levenshtein.cpp  levenshtein.h  myDynamicHashTable  tcpserver.cpp  tcpserver.h  testPersist.txt  xp-commons.kdev4  xp-commons.kdevelop  (+2 more)
projects/smartbands/magic/xp/xp-commons/.kdev4/: xp-commons.kdev4
projects/smartbands/magic/xp/xp-commons/test/: BucketTest.cpp  BucketTest.h  DynamicHashTableTest.cpp  DynamicHashTableTest.h  HashStaticRecordTest.cpp  HashStaticRecordTest.h  lev3.txt  main.cpp  shot_1251725207324860.txt  shot_1251725226923886.txt  tester
projects/smartbands/magic/xp/xp-compare-job/: filldb.rb
projects/smartbands/magic/xp/xp-database/: xp-database.mwb  xp-database.mwb.bak  xp-dbscript.sql
projects/smartbands/magic/xp/xp-frontend/: CMakeLists.txt  XPMonitorMaster.cpp  XPMonitorMaster.h  XPTargetServerRequest.cpp  XPTargetServerRequest.h  main.cpp
projects/smartbands/magic/xp/xp-levenshtein/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  levenstein.cpp  xp-levenshtein
projects/smartbands/magic/xp/xp-web-ui/: Session.vim
projects/smartffiler-chrome/: background.html  background.js  contentscript.html  contentscript.js  manifest.json
stylesheets/: green.css  green.min.css  index.html  jquery.mobile.structure-1.3.1.min.css
stylesheets/themes/: green-brown.css  green-brown.min.css
(+228 files in other folders)
